# urbanIQ

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PRESENTATION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/code-quality/: quick-refactoring-analysis.md
.claude/commands/debugging/: systematic-issue-resolver.md
.claude/commands/documentation/: generate-changelog-entry.md
.claude/commands/git-workflow/: cleanup-branches.md  create-pull-request.md  intelligent-commit.md  intelligent-merge-resolver.md  quick-status.md  start-feature.md  sync-with-main.md
.claude/commands/project-management/: base-project-setup.md  execute-task.md  prp-create-simple.md  prp-create.md  prp-execute.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
PRP/: projekt-setup-basis-struktur-2025-09-10.md
ai-doc/: DATABASE_SCHEMA.md  DEPLOYMENT_CONFIGURATION.md  IMPLEMENTATION_ROADMAP.md  README.md  SERVICE_ARCHITECTURE.md  TESTING_STRATEGY.md
alembic/: env.py
alembic/versions/: 2fad24e4d62a_initial_migration_add_job_package_and_.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  chat.py  chat_background.py  data_sources.py  deps.py  frontend.py  health.py  jobs.py  packages.py
app/connectors/: __init__.py  base.py  geoportal.py  geoportal_extended.py  geoportal_extended2.py  osm.py
app/frontend/static/css/: custom.css
app/frontend/static/js/: htmx-extensions.js
app/frontend/templates/: base.html  index.html
app/models/: __init__.py  data_source.py  job.py  package.py
app/services/: __init__.py  data_service.py  export_service.py  metadata_service.py  nlp_service.py  processing_service.py
app/templates/metadata/: geodata_report_de.md  geodata_report_en.md
doc/: API_DESIGN.md  CONNECTOR_SPECIFICATIONS.md  FRONTEND_IMPLEMENTATION.md  README.md  SERVICE_ARCHITECTURE.md
doc_archive/: BUILD_INSTRUCTIONS.md
scripts/: setup-env.sh
tests/: conftest.py  test_config.py  test_database.py  test_health.py
tests/test_api/: test_chat.py  test_data_sources.py  test_frontend.py  test_jobs.py  test_packages.py
tests/test_connectors/: test_geoportal.py  test_geoportal_extended.py  test_geoportal_extended2.py  test_osm.py
tests/test_models/: __init__.py  test_data_source.py  test_job.py  test_package.py
tests/test_services/: test_data_service.py  test_export_service.py  test_metadata_service.py  test_nlp_service.py  test_processing_service.py
tests/utils/: __init__.py  mock_connectors.py  test_data_generator.py
